src/components/Section/Section.module.css
.section {
    display: grid;
    grid-template-rows: repeat(3, auto);
    grid-template-columns: auto 1fr;
    column-gap: 1rem;
}

.section__icon,
.section__decoration {
    grid-column: 1 / 2;
}

.section__pretitle,
.section__title,
.section__body {
    grid-column: 2 / 3;
}

.section__decoration,
.section__body {
    grid-row: 3 / 4;
}

.section__icon,
.section__title {
    grid-row: 2 / 3;
}

.section__icon {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem 0;
    overflow: visible;
}

.section__icon::after {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: -1;
    width: 1.375rem;
    height: 1.375rem;
    translate: -50% -50%;
    border-radius: 50%;
    filter: blur(10px);
    overflow: visible;
}

.section__icon > svg {
    height: 1em;
    width: 1em;
    font-size: 1.25rem;
}

.section__decoration {
    position: relative;
}

.section__decoration::after {
    content: '';
    position: absolute;
    top: 0;
    left: calc(50% - 1px);
    width: 1px;
    height: calc(100% + 5rem);
    margin: auto;
    border-radius: 1rem;
    box-shadow: 0px 1px 3px var(--foreground-blue-tint);
}

.section__body > *:first-child {
    margin-top: 0.5rem;
}

.section__pretitle {
    grid-row: 1 / 2;
}

.section__title {
    margin: 0.438rem 0 0;
}

.section--theme_purple .section__icon::after {
    background-color: var(--foreground-purple-tint);
}

.section--theme_purple .section__decoration::after {
    background: linear-gradient(
        180deg,
        var(--foreground-purple-tint) 0%,
        var(--foreground-purple-shade) 33.33%,
        var(--foreground-green-shade) 66.66%,
        var(--foreground-green-tint) 100%
    );
}

.section--theme_purple .section__pretitle {
    color: var(--foreground-purple-tint);
}

.section--theme_green .section__icon::after {
    background-color: var(--foreground-green-tint);
}

.section--theme_green .section__decoration::after {
    background: linear-gradient(
        180deg,
        var(--foreground-green-tint) 0%,
        var(--foreground-green-shade) 33.33%,
        var(--foreground-orange-shade) 66.66%,
        var(--foreground-orange-tint) 100%
    );
}

.section--theme_green .section__pretitle {
    color: var(--foreground-green-tint);
}

.section--theme_orange .section__icon::after {
    background-color: var(--foreground-orange-tint);
}

.section--theme_orange .section__pretitle {
    color: var(--foreground-orange-tint);
}

@media only screen and (min-width: calc(640px + 40px)) {
    .section__title {
        margin: 0.1875rem 0 0;
    }
}

